--- a/drools-wb-screens/drools-wb-guided-template-editor/drools-wb-guided-template-editor-api/pom.xml
+++ b/drools-wb-screens/drools-wb-guided-template-editor/drools-wb-guided-template-editor-api/pom.xml
@@ -59,6 +59,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.kie.soup</groupId>
+      <artifactId>kie-soup-project-datamodel-api</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.uberfire</groupId>
       <artifactId>uberfire-services-api</artifactId>
     </dependency>
