--- a/drools-wb-screens/drools-wb-drl-text-editor/drools-wb-drl-text-editor-client/pom.xml
+++ b/drools-wb-screens/drools-wb-drl-text-editor/drools-wb-drl-text-editor-client/pom.xml
@@ -27,16 +27,16 @@
       <artifactId>drools-workbench-models-datamodel-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.guvnor</groupId>
-      <artifactId>guvnor-project-api</artifactId>
+      <groupId>org.uberfire</groupId>
+      <artifactId>uberfire-project-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.guvnor</groupId>
-      <artifactId>guvnor-services-api</artifactId>
+      <groupId>org.uberfire</groupId>
+      <artifactId>uberfire-services-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.guvnor</groupId>
-      <artifactId>guvnor-structure-client</artifactId>
+      <groupId>org.uberfire</groupId>
+      <artifactId>uberfire-structure-client</artifactId>
     </dependency>
     <dependency>
       <groupId>org.jboss.errai</groupId>
