--- a/drools-wb-screens/drools-wb-factmodel-editor/drools-wb-factmodel-editor-backend/pom.xml
+++ b/drools-wb-screens/drools-wb-factmodel-editor/drools-wb-factmodel-editor-backend/pom.xml
@@ -47,8 +47,8 @@
     </dependency>
 
     <dependency>
-      <groupId>org.guvnor</groupId>
-      <artifactId>guvnor-project-api</artifactId>
+      <groupId>org.uberfire</groupId>
+      <artifactId>uberfire-project-api</artifactId>
     </dependency>
 
     <dependency>
