--- a/drools-wb-screens/drools-wb-guided-template-editor/drools-wb-guided-template-editor-api/pom.xml
+++ b/drools-wb-screens/drools-wb-guided-template-editor/drools-wb-guided-template-editor-api/pom.xml
@@ -19,8 +19,8 @@
 
     <!-- dependencies added because of new illegal transitive dependency check -->
     <dependency>
-      <groupId>org.guvnor</groupId>
-      <artifactId>guvnor-project-api</artifactId>
+      <groupId>org.uberfire</groupId>
+      <artifactId>uberfire-project-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.jboss.errai</groupId>
@@ -59,8 +59,8 @@
     </dependency>
 
     <dependency>
-      <groupId>org.guvnor</groupId>
-      <artifactId>guvnor-services-api</artifactId>
+      <groupId>org.uberfire</groupId>
+      <artifactId>uberfire-services-api</artifactId>
     </dependency>
 
     <dependency>
